--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ section.main p {
     font-size: 16px;
     font-weight: 200;
     text-align: left;
+    line-height: 22px;
 
 }
 section.main h4 {
